acceptance_tests/invalid_scripts/unknown_worker.bdl
#!benchDL
pool(size = 1,
     worker_type = unknown_worker):
    something()
